# liburi

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  URI.h  acinclude.m4  auth.c  configure.ac  fragment.c  fspath.c  host.c  info.c  liburi.3.xml  liburi.h  liburi.pc.in  p_liburi.h  param.c  parse.c  path.c  port.c  props.c  query.c  rebase.c  recompose.c  scheme.c  unicode.c  uri.c  uri_query.3  uri_scheme.3.xml  uriparser-Makefile.am
debian/: control  liburi-dev.install
man/: Makefile.am
t/: .gitignore  Makefile.am  anchor.c  file-http-base.c  match.c  parse-http  parse-http.c  rebase-http  rebase-http.c
t/lib/: Makefile.am  match.c  p_tests.h
util/: liburi-config.c  uriparse.c
